further python changes and graph

--- a/pythonAnalysis.ipynb
+++ b/pythonAnalysis.ipynb
@@ -425,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Upon getting the data, we see that there are many missing values in the \"t_manu\", \"t_model\", \"t_cap\" and \"t_ttlh\" columns\n",
+    "Upon getting the data, we see that there are many missing values in the \"t_manu\", \"t_model\", \"t_cap\", \"p_year\" and \"t_ttlh\" columns\n",
     "\n",
     "We then filter these and drop them from the dataFrame"
    ]
@@ -1594,68 +1594,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Adding a new column\n",
-    "\n",
-    "We'll be adding a new column <b>range</b> to the data.\n",
-    "This column would specify the ranges values in the \"t_cap\" column\n",
-    "\n",
-    "The ranges would be:\n",
-    "\n",
-    "<li> < 1000</li>\n",
-    "<li>1000 - 2000</li>\n",
-    "<li>2000 - 3000</li>\n",
-    "<li> > 3000</li>"
+    "## Drop missing p_year"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get the \"t_cap\" column:\n",
-    "t_cap = df_wind['t_cap']"
+    "# Get the rows that have the missing \"p_year\"\n",
+    "p_year_drop = df_wind.index[df_wind['p_year'] == -9999].tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "range_list = []"
+    "# Now drop those rows from the dataFrame\n",
+    "df_wind.drop(p_year_drop, axis=0, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for value in t_cap:\n",
-    "    if value < 1000:\n",
-    "        range_list.append(\"< 1000\")\n",
-    "    elif value >= 1000 and value < 2000:\n",
-    "        range_list.append(\"1000 - 2000\")\n",
-    "    elif value >= 2000 and value < 3000:\n",
-    "        range_list.append(\"2000 - 3000\")\n",
-    "    elif value >= 3000:\n",
-    "        range_list.append(\"≥ 3000\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Adding the list as a new column\n",
-    "df_wind['Range'] = range_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1873,7 +1837,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>51307 rows × 13 columns</p>\n",
+       "<p>51304 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1916,16 +1880,443 @@
        "55531    AOC15_65     65    38.0 -162.551575  66.837898       < 1000  \n",
        "55532    AOC15_65     65    38.0 -162.557327  66.834328       < 1000  \n",
        "\n",
-       "[51307 rows x 13 columns]"
+       "[51304 rows x 13 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_wind"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adding a new column\n",
+    "\n",
+    "We'll be adding a new column <b>range</b> to the data.\n",
+    "This column would specify the ranges values in the \"t_cap\" column\n",
+    "\n",
+    "The ranges would be:\n",
+    "\n",
+    "<li> < 1000</li>\n",
+    "<li>1000 - 2000</li>\n",
+    "<li>2000 - 3000</li>\n",
+    "<li> > 3000</li>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the \"t_cap\" column:\n",
+    "t_cap = df_wind['t_cap']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "range_list = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for value in t_cap:\n",
+    "    if value < 1000:\n",
+    "        range_list.append(\"< 1000\")\n",
+    "    elif value >= 1000 and value < 2000:\n",
+    "        range_list.append(\"1000 - 2000\")\n",
+    "    elif value >= 2000 and value < 3000:\n",
+    "        range_list.append(\"2000 - 3000\")\n",
+    "    elif value >= 3000:\n",
+    "        range_list.append(\"≥ 3000\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding the list as a new column\n",
+    "df_wind['Range'] = range_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>case_id</th>\n",
+       "      <th>t_state</th>\n",
+       "      <th>t_county</th>\n",
+       "      <th>p_name</th>\n",
+       "      <th>p_year</th>\n",
+       "      <th>p_tnum</th>\n",
+       "      <th>t_manu</th>\n",
+       "      <th>t_model</th>\n",
+       "      <th>t_cap</th>\n",
+       "      <th>t_ttlh</th>\n",
+       "      <th>xlong</th>\n",
+       "      <th>ylat</th>\n",
+       "      <th>Range</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>3063269</td>\n",
+       "      <td>IA</td>\n",
+       "      <td>Story County</td>\n",
+       "      <td>30 MW Iowa DG Portfolio</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Nordex</td>\n",
+       "      <td>AW125/3000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>-93.632835</td>\n",
+       "      <td>41.882477</td>\n",
+       "      <td>≥ 3000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191</th>\n",
+       "      <td>3057059</td>\n",
+       "      <td>IA</td>\n",
+       "      <td>Story County</td>\n",
+       "      <td>30 MW Iowa DG Portfolio</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Nordex</td>\n",
+       "      <td>AW125/3000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>-93.623009</td>\n",
+       "      <td>41.881470</td>\n",
+       "      <td>≥ 3000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>3060912</td>\n",
+       "      <td>IA</td>\n",
+       "      <td>Story County</td>\n",
+       "      <td>30 MW Iowa DG Portfolio</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Nordex</td>\n",
+       "      <td>AW125/3000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>-93.513710</td>\n",
+       "      <td>42.019119</td>\n",
+       "      <td>≥ 3000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193</th>\n",
+       "      <td>3063272</td>\n",
+       "      <td>IA</td>\n",
+       "      <td>Story County</td>\n",
+       "      <td>30 MW Iowa DG Portfolio</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Nordex</td>\n",
+       "      <td>AW125/3000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>-93.430367</td>\n",
+       "      <td>42.028233</td>\n",
+       "      <td>≥ 3000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>3049502</td>\n",
+       "      <td>IA</td>\n",
+       "      <td>Story County</td>\n",
+       "      <td>30 MW Iowa DG Portfolio</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Nordex</td>\n",
+       "      <td>AW125/3000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>-93.518082</td>\n",
+       "      <td>42.013630</td>\n",
+       "      <td>≥ 3000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55167</th>\n",
+       "      <td>3057399</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>El Paso County</td>\n",
+       "      <td>unknown El Paso County</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>2</td>\n",
+       "      <td>GE Wind</td>\n",
+       "      <td>GE1.7-100</td>\n",
+       "      <td>1700</td>\n",
+       "      <td>130.1</td>\n",
+       "      <td>-106.405434</td>\n",
+       "      <td>31.788124</td>\n",
+       "      <td>1000 - 2000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55168</th>\n",
+       "      <td>3057398</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>El Paso County</td>\n",
+       "      <td>unknown El Paso County</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>2</td>\n",
+       "      <td>GE Wind</td>\n",
+       "      <td>GE1.7-100</td>\n",
+       "      <td>1700</td>\n",
+       "      <td>130.1</td>\n",
+       "      <td>-106.405670</td>\n",
+       "      <td>31.788097</td>\n",
+       "      <td>1000 - 2000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55368</th>\n",
+       "      <td>3052682</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>Erie County</td>\n",
+       "      <td>unknown Erie County</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Northern Power Systems</td>\n",
+       "      <td>NPS-100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>47.5</td>\n",
+       "      <td>-78.931122</td>\n",
+       "      <td>42.977005</td>\n",
+       "      <td>&lt; 1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55531</th>\n",
+       "      <td>3001855</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>Northwest Arctic Borough</td>\n",
+       "      <td>unknown Kotzebue Wind Project</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Seaforth Energy</td>\n",
+       "      <td>AOC15_65</td>\n",
+       "      <td>65</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>-162.551575</td>\n",
+       "      <td>66.837898</td>\n",
+       "      <td>&lt; 1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55532</th>\n",
+       "      <td>3003325</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>Northwest Arctic Borough</td>\n",
+       "      <td>unknown Kotzebue Wind Project</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Seaforth Energy</td>\n",
+       "      <td>AOC15_65</td>\n",
+       "      <td>65</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>-162.557327</td>\n",
+       "      <td>66.834328</td>\n",
+       "      <td>&lt; 1000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>51304 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       case_id t_state                  t_county  \\\n",
+       "190    3063269      IA              Story County   \n",
+       "191    3057059      IA              Story County   \n",
+       "192    3060912      IA              Story County   \n",
+       "193    3063272      IA              Story County   \n",
+       "194    3049502      IA              Story County   \n",
+       "...        ...     ...                       ...   \n",
+       "55167  3057399      TX            El Paso County   \n",
+       "55168  3057398      TX            El Paso County   \n",
+       "55368  3052682      NY               Erie County   \n",
+       "55531  3001855      AK  Northwest Arctic Borough   \n",
+       "55532  3003325      AK  Northwest Arctic Borough   \n",
+       "\n",
+       "                              p_name  p_year  p_tnum                  t_manu  \\\n",
+       "190          30 MW Iowa DG Portfolio    2017      10                  Nordex   \n",
+       "191          30 MW Iowa DG Portfolio    2017      10                  Nordex   \n",
+       "192          30 MW Iowa DG Portfolio    2017      10                  Nordex   \n",
+       "193          30 MW Iowa DG Portfolio    2017      10                  Nordex   \n",
+       "194          30 MW Iowa DG Portfolio    2017      10                  Nordex   \n",
+       "...                              ...     ...     ...                     ...   \n",
+       "55167         unknown El Paso County    2015       2                 GE Wind   \n",
+       "55168         unknown El Paso County    2015       2                 GE Wind   \n",
+       "55368            unknown Erie County    2016       2  Northern Power Systems   \n",
+       "55531  unknown Kotzebue Wind Project    2003       2         Seaforth Energy   \n",
+       "55532  unknown Kotzebue Wind Project    2003       2         Seaforth Energy   \n",
+       "\n",
+       "          t_model  t_cap  t_ttlh       xlong       ylat        Range  \n",
+       "190    AW125/3000   3000   150.0  -93.632835  41.882477       ≥ 3000  \n",
+       "191    AW125/3000   3000   150.0  -93.623009  41.881470       ≥ 3000  \n",
+       "192    AW125/3000   3000   150.0  -93.513710  42.019119       ≥ 3000  \n",
+       "193    AW125/3000   3000   150.0  -93.430367  42.028233       ≥ 3000  \n",
+       "194    AW125/3000   3000   150.0  -93.518082  42.013630       ≥ 3000  \n",
+       "...           ...    ...     ...         ...        ...          ...  \n",
+       "55167   GE1.7-100   1700   130.1 -106.405434  31.788124  1000 - 2000  \n",
+       "55168   GE1.7-100   1700   130.1 -106.405670  31.788097  1000 - 2000  \n",
+       "55368     NPS-100    100    47.5  -78.931122  42.977005       < 1000  \n",
+       "55531    AOC15_65     65    38.0 -162.551575  66.837898       < 1000  \n",
+       "55532    AOC15_65     65    38.0 -162.557327  66.834328       < 1000  \n",
+       "\n",
+       "[51304 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_wind"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get all maximum and minimum values\n",
+    "\n",
+    "We sought out to find the maximum values in all the quantitative data in the dataset. These values are then used to scale the plots properly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p_year: [2018, 1983]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Maximum and minimum p_year (Project year)\n",
+    "max_year = df_wind['p_year'].max()\n",
+    "min_year = df_wind['p_year'].min()\n",
+    "print(\"p_year: [%d, %d]\" % (max_year, min_year))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p_tnum: [460, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Maximum and minimum p_tnum (number of turbines in project)\n",
+    "max_tnum = df_wind['p_tnum'].max()\n",
+    "min_tnum = df_wind['p_tnum'].min()\n",
+    "print(\"p_tnum: [%d, %d]\" % (max_tnum, min_tnum))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t_cap: [6000, 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Maximum and minimum t_cap ()\n",
+    "max_tcap = df_wind['t_cap'].max()\n",
+    "min_tcap = df_wind['t_cap'].min()\n",
+    "print(\"t_cap: [%d, %d]\" % (max_tcap, min_tcap))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t_ttlh: [198, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Maximum and minimum t_ttlh\n",
+    "max_ttlh = df_wind['t_ttlh'].max()\n",
+    "min_ttlh = df_wind['t_ttlh'].min()\n",
+    "print(\"t_ttlh: [%d, %d]\" % (max_ttlh, min_ttlh))"
    ]
   },
   {
