--- a/pythonAnalysis.ipynb
+++ b/pythonAnalysis.ipynb
@@ -399,6 +399,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dropping columns\n",
+    "\n",
+    "There's some columns in the dataset that we won't need, so we go ahead and drop them"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 112,
    "metadata": {},
